# gb_emu

./: .gitignore  Cargo.toml  readme.md
resources/testroms/: vectroid.gbc
resources/testroms/opus/test1/: readme.txt
resources/testroms/opus/test2/: mk.bat  readme.txt  setpath.bat  testGame.asm
src/: bootrom.rs  common.rs  cpu.rs  cpu2.rs  debugger.rs  gbstate.rs  hardware.rs  lib.rs  main.rs  mmu.rs  mmu2.rs  opcodes.rs  ops.rs  optest.rs  ppu.rs  ppu2.rs  screen.rs
