[package]
name = "gb_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
env_logger = "0.9.0"
png = "0.17.2"
structopt = "0.3.25"
serde = "1.0.133"
serde_json = "1.0.75"

